src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASLead_Notification_Timing__c</fullName>
        <label>ASLead Notification Timing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                    <default>true</default>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>3 times a day</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisition_Objective_Method__c</fullName>
        <label>Acquisition Objective &amp; Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Service In</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisition_Record_Date__c</fullName>
        <label>Acquisition Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>MB Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Contracts__c</fullName>
        <label>Active Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Age range of individual 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_AgeRange&quot;</description>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>17-25</fullName>
                </value>
                <value>
                    <fullName>26-35</fullName>
                </value>
                <value>
                    <fullName>36-45</fullName>
                </value>
                <value>
                    <fullName>46-55</fullName>
                </value>
                <value>
                    <fullName>56-65</fullName>
                </value>
                <value>
                    <fullName>65+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Below 17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>/* 
			Calculate Age of the Customer
		*/</description>
        <formula>IF(ISNULL(PersonContact.Birthdate) , &apos;&apos;, TEXT(FLOOR((TODAY()-PersonContact.Birthdate +1)/365.2425)))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_for_CC_New__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(General_Personal_Information_Mandatory__c,&apos;&apos;)),NOT(ISPICKVAL(General_Personal_Information_Optional__c,&apos;&apos;)),NOT(ISPICKVAL( Unique_Identification_Info_Mandatory__c,&apos;&apos;)),NOT(ISPICKVAL(General_Personal_InfoThirdParty_Optional__c,&apos;&apos;)),NOT(ISPICKVAL(Targeted_Advertising_Info_Optional__c,&apos;&apos;)),NOT(ISPICKVAL(Unique_Identity_Info_ThirdParty_Optional__c,&apos;&apos;))),TODAY(),null)</formula>
        <label>Agreement Date for CC New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_for_CC_Old__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Personal_Agreement_CC_Old__c,&apos;&apos;)),NOT(ISPICKVAL(Personal_Info_Third_Party_Release_CC_Old__c,&apos;&apos;)),NOT(ISPICKVAL( Agreement_to_commit_info_proces_CC_Old__c,&apos;&apos;)),NOT(ISPICKVAL(Personal_Abroad_Agreement_CC_Old__c,&apos;&apos;))),TODAY(),null)</formula>
        <label>Agreement Date for CC Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_for_Contact_Method__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Personal_Agreement__c,&apos;&apos;)),NOT(ISPICKVAL(Personal_Information_Third_Party_Release__c ,&apos;&apos;)),NOT(ISPICKVAL( Agreement_to_commit_info_processing__c,&apos;&apos;)),NOT(ISPICKVAL(Personal_Abroad_Agreement__c,&apos;&apos;))),TODAY(),null)</formula>
        <label>Agreement Date for Contact Method</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_for_Marketing_Consent__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(General_Personal_Info_Sales_Marketing__c,&apos;&apos;))),TODAY(),null)</formula>
        <label>Agreement Date for Marketing Consent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_for_Service_24h_Consent__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Personal_Agreement_Service_24h__c,&apos;&apos;))),TODAY(),null)</formula>
        <label>Agreement Date for Service 24h Consent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_to_commit_info_proces_CC_Old__c</fullName>
        <label>Agreement to commit info processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_to_commit_info_processing_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Agreement to commit info processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_to_commit_info_processing__c</fullName>
        <label>Agreement to commit info processing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_channel_opt_out__c</fullName>
        <formula>IF(NOT(AND(Opt_In_Email__c,Opt_In_Home_Phone__c,Opt_In_SMS__c,Opt_In_Work_Phone__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All channel opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Offered_Service__c</fullName>
        <label>Alliance Offered Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allmakes_Offered_Service__c</fullName>
        <label>Allmakes Offered Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing2__c</fullName>
        <label>Allow Data Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No Choice Yet</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing_Comment__c</fullName>
        <label>Allow Data Sharing Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to allow data sharing 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DoCdata&quot;</description>
        <label>Allow Data Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No Choice Yet</fullName>
                    <default>true</default>
                    <label>No Choice Yet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Marketing_Info__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to allow sending marketing information 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DoCmarket&quot;</description>
        <label>Allow Marketing Info</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No Choice Yet</fullName>
                    <default>true</default>
                    <label>No Choice Yet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Income_Range__c</fullName>
        <label>Annual Income Range</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Range 1</fullName>
                </value>
                <value>
                    <fullName>Range 2</fullName>
                </value>
                <value>
                    <fullName>Range 3</fullName>
                </value>
                <value>
                    <fullName>Range 4</fullName>
                </value>
                <value>
                    <fullName>Range 5</fullName>
                </value>
                <value>
                    <fullName>Range 6</fullName>
                </value>
                <value>
                    <fullName>Range 7</fullName>
                </value>
                <value>
                    <fullName>Range 8</fullName>
                </value>
                <value>
                    <fullName>Range 9</fullName>
                </value>
                <value>
                    <fullName>Range 10</fullName>
                </value>
                <value>
                    <fullName>Range 11</fullName>
                </value>
                <value>
                    <fullName>Range 12</fullName>
                </value>
                <value>
                    <fullName>Range 13</fullName>
                </value>
                <value>
                    <fullName>Range 14</fullName>
                </value>
                <value>
                    <fullName>Range 15</fullName>
                </value>
                <value>
                    <fullName>Range 16</fullName>
                </value>
                <value>
                    <fullName>Range 17</fullName>
                </value>
                <value>
                    <fullName>A: &lt; 100,000 THB</fullName>
                </value>
                <value>
                    <fullName>B: 100,001 - 200,000 THB</fullName>
                </value>
                <value>
                    <fullName>C: 200,001 - 300,000 THB</fullName>
                </value>
                <value>
                    <fullName>D: 300,001 - 400,000 THB</fullName>
                </value>
                <value>
                    <fullName>E: 400,001 - 500,000 THB</fullName>
                </value>
                <value>
                    <fullName>F: &gt; 500,000 THB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Mileage__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of kilometres the individual drives per year 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_AnnualMileage&quot;</description>
        <label>Annual Mileage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Required by business during the workshop, which exists in current avarto system ( Ã¥Å’ÂºÃ¥ÂÂ·).</description>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Lead_Amount_of_Everyday__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-15) 
Function: Caculate Amount of assigned leads every day

Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>*Assigned Lead Amount of Everyday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_Least_One_Phone__c</fullName>
        <formula>IF(OR
(
LEN(PersonMobilePhone) &lt;&gt; 0,
LEN( PersonOtherPhone ) &lt;&gt; 0,
LEN( PersonHomePhone ) &lt;&gt; 0,
LEN( Phone ) &lt;&gt; 0
), &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At Least One Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Flex__c</fullName>
        <label>Base Flex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <label>Batch No.</label>
        <length>2560</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Behavioural_Group__c</fullName>
        <label>Behavioural Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New to the brand</fullName>
                </value>
                <value>
                    <fullName>Revolver</fullName>
                </value>
                <value>
                    <fullName>Attriter</fullName>
                </value>
                <value>
                    <fullName>Keeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_name_ENG__c</fullName>
        <label>Branch Name ENG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name_Native__c</fullName>
        <label>Branch Name Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <label>Branch name (CHS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Offered_Service__c</fullName>
        <label>Bus Offered Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Allmakes</fullName>
                </value>
                <value>
                    <fullName>Freightliner</fullName>
                </value>
                <value>
                    <fullName>Fuso</fullName>
                </value>
                <value>
                    <fullName>MB Bus</fullName>
                </value>
                <value>
                    <fullName>MB Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Trucks</fullName>
                </value>
                <value>
                    <fullName>MB Trucks</fullName>
                </value>
                <value>
                    <fullName>MB Vans</fullName>
                </value>
                <value>
                    <fullName>SelecTrucks</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Special Vehicles</fullName>
                </value>
                <value>
                    <fullName>Unimog</fullName>
                </value>
                <value>
                    <fullName>Western Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buy_Cycle__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of months to replace vehicle, i.e. buying cycle 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_BuyCycle&quot;</description>
        <label>Buy Cycle</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAC_PERSON_UID__c</fullName>
        <label>Compass Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM_UCID__c</fullName>
        <label>CDM UCID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Dealer_BPID__c</fullName>
        <label>CMS Dealer BPID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_SAP_No__c</fullName>
        <label>CMS SAP No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_No_Brand_Purchases__c</fullName>
        <label>CV No. Brand Purchases</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Status__c</fullName>
        <description>Needs to be coded:

Status a customer can have in regards to CV.
Prospect - is interested in CV
Customer - does have at least one CV
Service Only - does have at least one After Sales Record</description>
        <label>CV Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Service Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CV_Tenure__c</fullName>
        <label>CV Tenure</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Owner_Club__c</fullName>
        <label>Car Owner Club</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMG Private Lounge</fullName>
                </value>
                <value>
                    <fullName>GLK Club</fullName>
                </value>
                <value>
                    <fullName>AMG Club</fullName>
                </value>
                <value>
                    <fullName>smart Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Sales_Region__c</fullName>
        <label>Car Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cars_Offered_Service__c</fullName>
        <label>Cars Offered Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_CN__c</fullName>
        <description>Chinese dealer city name - 
For Dealers this is populated by the GSSN system - not modified in SFDC
Attribute in Data Dictionary object Dealer is &quot;Dealer_CityCN&quot;</description>
        <label>City CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Chinese dealer city name - 
For Dealers this is populated by the GSSN system - not modified in SFDC
Attribute in Data Dictionary object Dealer is &quot;Dealer_CityCN&quot;</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicksell__c</fullName>
        <label>Clicksell</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Reg_No__c</fullName>
        <label>Commercial Register Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAssistantPhone__c</fullName>
        <description>Assistant Phone from CRis for company account</description>
        <label>CompanyAssistantPhone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyOtherPhone__c</fullName>
        <description>Other phone from CRis for company account</description>
        <label>CompanyOtherPhone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Fiscal_Year_Start__c</fullName>
        <label>Fiscal Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Legal_Form_Native__c</fullName>
        <label>Company Legal Form Native</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Legal_Form__c</fullName>
        <label>Company Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Stock company</fullName>
                </value>
                <value>
                    <fullName>Limited liability company</fullName>
                </value>
                <value>
                    <fullName>Limited partnership company</fullName>
                </value>
                <value>
                    <fullName>Unlimited partnership company</fullName>
                </value>
                <value>
                    <fullName>Mutual company</fullName>
                </value>
                <value>
                    <fullName>Joint venture</fullName>
                </value>
                <value>
                    <fullName>Medical enterprise</fullName>
                </value>
                <value>
                    <fullName>Medical corporation</fullName>
                </value>
                <value>
                    <fullName>Social welfare institution</fullName>
                </value>
                <value>
                    <fullName>Education insitution</fullName>
                </value>
                <value>
                    <fullName>Religious corporation</fullName>
                </value>
                <value>
                    <fullName>Cooperative society</fullName>
                </value>
                <value>
                    <fullName>Mutual aid association</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Legal_Form_text_Native__c</fullName>
        <label>Company Legal Form text Native</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Form_text__c</fullName>
        <label>Company Legal Form Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Native_1__c</fullName>
        <label>Company Name Native</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Native_2__c</fullName>
        <label>Company Name Native2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Attribute in Data Dictionary object Contact is &quot;Contact_CompanyName&quot;</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_No_Of_Employees__c</fullName>
        <label>No of Employee</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 50</fullName>
                </value>
                <value>
                    <fullName>50 - 100</fullName>
                </value>
                <value>
                    <fullName>100 - 300</fullName>
                </value>
                <value>
                    <fullName>300 - 500</fullName>
                </value>
                <value>
                    <fullName>500 - 1000</fullName>
                </value>
                <value>
                    <fullName>1000 - 3000</fullName>
                </value>
                <value>
                    <fullName>3000 - 5000</fullName>
                </value>
                <value>
                    <fullName>More than 5000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Company)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Complaint Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_Form_Serial_No__c</fullName>
        <label>Consent Form Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Form_Serial_No_for_CC_New__c</fullName>
        <label>Consent Form Serial No for CC New</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Form_Serial_No_for_Marketing__c</fullName>
        <label>Consent Form Serial No for Marketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>